--- a/.github/workflows/编译自用精简版固件.yml
+++ b/.github/workflows/编译自用精简版固件.yml
@@ -11,7 +11,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: N1.config
+  CONFIG_FILE: .config-tiny
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   TZ: Asia/Shanghai
@@ -147,10 +147,11 @@ jobs:
           #retain_days: ${{ github.event.inputs.action_days }}
     
     - name: 删除多余releases
-      uses: dev-drprasad/delete-older-releases@v0.1.0
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      uses: dev-drprasad/delete-older-releases@master
       with:
-        keep_latest: 3
+        repo: ${{ github.repository }}
+        keep_latest: 5
+        #keep_latest: ${{ github.event.inputs.rele }}
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
