--- a/.github/workflows/编译N1自用精简版固件.yml
+++ b/.github/workflows/编译N1自用精简版固件.yml
@@ -12,8 +12,8 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: N1.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P1_SH: N1-diy-part1.sh
+  DIY_P2_SH: N1-diy-part2.sh
   TZ: Asia/Shanghai
 
 jobs:
