--- a/.github/workflows/自用编译N1精简版固件.yml
+++ b/.github/workflows/自用编译N1精简版固件.yml
@@ -125,17 +125,33 @@ jobs:
         PACKAGE_SOC: s905d
        # KERNEL_AUTO_LATEST: false
         KERNEL_REPO_URL: https://github.com/quanjindeng/Actions_OpenWrt-Amlogic/tree/main/kernel
-        KERNEL_VERSION_NAME: 5.17.1
-
-    - name: 发布固件
+        KERNEL_VERSION_NAME: 5.4.188
+        
+    - name: Create release
+      if: steps.package.outputs.status == 'true' && env.RELEASE == 'true' && !cancelled()
       uses: ncipollo/release-action@v1
       with:
-        tag: openwrt_N1_${{ env.PACKAGED_OUTPUTDATE }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        name: ${{ env.DATE }} 🚀 / N1-Openwrt | 编译
         allowUpdates: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ env.tag_name }}
+        commit: master
+        token: ${{ secrets.RELEASES_TOKEN  }}
         body: |
-          自用精简版固件，勿下！
+          默认IP：192.168.0.130 默认密码： password
+          全新刷入emmc方法：
+             1. 固件刷入U盘。
+             2. cd root
+             3. ./install-to-emmc.sh
+             4. 拔掉U盘，断电重启。
+             
+          在线升级方法：
+             1. 上传 img 到/mnt/mmcblk2p4
+             2. cd /mnt/mmcblk2p4
+             3. 升级脚本下载 update-amlogic-openwrt.sh
+             4. chmod +x update-amlogic-openwrt.sh
+             5. gzip -d  *.img.gz
+             6. ./update-amlogic-openwrt.sh xxxx.img
+        artifacts:  ${{ env.UPLOAD }}/*
           
     - name: 清理Actions空间
       uses: Mattraks/delete-workflow-runs@main
