--- a/.github/workflows/自用编译N1精简版固件.yml
+++ b/.github/workflows/自用编译N1精简版固件.yml
@@ -136,7 +136,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           ### **适用于Amlogic平台的N1盒子OpenWrt固件**
-          * **固件信息：**
+          * **固件信息：自用精简版**
           默认IP: `192.168.0.130`
           默认用户名: `root`
           默认密码: `password`
