--- a/.github/workflows/自用编译N1精简版固件.yml
+++ b/.github/workflows/自用编译N1精简版固件.yml
@@ -14,8 +14,14 @@ env:
   CONFIG_FILE: N1.config
   DIY_P1_SH: N1-diy-part1.sh
   DIY_P2_SH: N1-diy-part2.sh
+  SSH_ACTIONS: false
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: false
+  UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-
+  
 jobs:
   build:
     runs-on: ubuntu-20.04
