--- a/.github/workflows/自用使用最新+内核打包.yml
+++ b/.github/workflows/自用使用最新+内核打包.yml
@@ -34,10 +34,10 @@ jobs:
         PACKAGE_SOC: s905d
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/quanjindeng/Actions_OpenWrt-Amlogic/tree/main/kernel
-       # 下面地址查看最新的内核
+       # ↓↓↓↓↓查看最新内核↓↓↓↓↓
         KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
         KERNEL_VERSION_NAME: 5.17.2
-
+        
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
@@ -46,5 +46,14 @@ jobs:
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          自用精简版固件，勿下！
-          
+          ### **适用于Amlogic平台的N1盒子OpenWrt固件**
+          * **固件信息：自用**
+          默认IP: `192.168.0.130`
+          默认用户名: `root`
+          默认密码: `password`
+          * **使用方法：**
+          1. 安装固件：写入U盘直接使用；U盘启动后可输入命令 `openwrt-install-amlogic` 按照英文提示写入到emmc
+          2. 更新固件：将固件放在 `/mnt/mmcblk2p4/` 目录下，输入命令 `openwrt-update-amlogic` 可直接更新
+          3. 登录Luci界面后，可直接使用`晶晨宝盒`插件进行写入emmc或者更新操作（使用前先按需求填写好插件设置），免去手动输入命令！
+          * **提示：**
+          `openwrt_s905d_n1_XX_XX` 文件名才是固件！
