--- a/.github/workflows/自用使用+o内核打包.yml
+++ b/.github/workflows/自用使用+o内核打包.yml
@@ -34,6 +34,7 @@ jobs:
         PACKAGE_SOC: s905d
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/quanjindeng/Actions_OpenWrt-Amlogic/tree/main/kernel
+       # ↓↓↓↓↓查看最新内核↓↓↓↓↓
         KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
         KERNEL_VERSION_NAME: 5.4.188
         
