--- a/.github/workflows/自用使用内核打包.yml
+++ b/.github/workflows/自用使用内核打包.yml
@@ -4,7 +4,7 @@
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #========================================================================================================================
 
-name: 自用使用最新+内核打包
+name: 自用使用内核打包
 
 on:
   repository_dispatch:
