--- a/.github/workflows/自用编译N1精简版固件.yml
+++ b/.github/workflows/自用编译N1精简版固件.yml
@@ -131,7 +131,7 @@ jobs:
         PACKAGE_SOC: s905d
        # KERNEL_AUTO_LATEST: false
         KERNEL_REPO_URL: https://github.com/quanjindeng/Actions_OpenWrt-Amlogic/tree/main/kernel
-        KERNEL_VERSION_NAME: 5.4.188
+        KERNEL_VERSION_NAME: 5.4.188_5.17.2
         
     - name: 发布固件
       uses: ncipollo/release-action@v1
