--- a/.github/workflows/自用编译N1精简版固件.yml
+++ b/.github/workflows/自用编译N1精简版固件.yml
@@ -11,7 +11,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: mini.config
+  CONFIG_FILE: N1.config
   DIY_P1_SH: N1-diy-part1.sh
   DIY_P2_SH: N1-diy-part2.sh
   SSH_ACTIONS: false
